--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "saml-metadata",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Streaming SAML 2.0 metadata parser",
-  "main": "build/index.d.ts",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
+  "files": [
+    "build",
+    "README.md",
+    "LICENSE"
+  ],
   "type": "module",
   "scripts": {
     "build": "tsc --resolveJsonModule",
@@ -20,7 +26,7 @@
   ],
   "author": {
     "name": "Žiga Leber",
-    "email": "npm@zigaleber.com"
+    "email": "mail+npm@zigaleber.com"
   },
   "license": "ISC",
   "bugs": {
@@ -33,7 +39,6 @@
   },
   "devDependencies": {
     "ava": "^5.2.0",
-    "copyfiles": "^2.4.1",
     "typescript": "^4.9.5"
   }
 }
