--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "saml-metadata",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Streaming SAML 2.0 metadata parser",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "files": [
-    "build",
+    "build/src",
     "README.md",
     "LICENSE"
   ],
