--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "saml-metadata",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Streaming SAML 2.0 metadata parser",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
+  "main": "build/src/index.js",
+  "types": "build/src/index.d.ts",
   "files": [
     "build/src",
     "README.md",
@@ -11,7 +11,7 @@
   ],
   "type": "module",
   "scripts": {
-    "build": "tsc --resolveJsonModule",
+    "build": "tsc",
     "test": "ava build/test/index.js"
   },
   "repository": {
