--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "saml-metadata",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "Streaming SAML 2.0 metadata parser",
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "ava": "^5.2.0",
+    "class-transformer": "^0.5.1",
     "typescript": "^4.9.5"
   }
 }
